src/test/ui/break-while-condition.stderr
error[E0308]: mismatched types
  --> $DIR/break-while-condition.rs:14:16
   |
LL |       let _: ! = { //~ ERROR mismatched types
   |  ________________^
LL | |         'a: while break 'a {};
LL | |     };
   | |_____^ expected !, found ()
   |
   = note: expected type `!`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
